# nba-ratings

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: requirements.txt  streamlit_app.py
nba_edge/: __init__.py  kelly.py  metrics.py  ratings.py
tests/: test_elo.py  test_kelly.py  test_metrics.py  test_mov_multiplier_pole.py  test_prob_dist.py  test_ratings.py
